# PhD-toolkit

./: README.md  test.ipynb
myphd_toolkit/: __init__.py  data.py  drug.py  graphing.py  phylo.py  setup.cfg  tbp.py  test.py
myphd_toolkit/myphd_toolkit.egg-info/: PKG-INFO  SOURCES.txt
