[metadata]
name = myphd_toolkit
version = 0.0.1
author = Linfeng Wang
author_email = linfeng.wang@lshtm.ac.uk
description = A package of all the boring function often used in my data analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/linfeng-wang/PhD-toolkit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False